# pokemon-team-builder

./: README.md  poke-builder.spec  pyproject.toml
.claude/agent-memory/sola-solution-architect/: MEMORY.md  project_pokemon_team_builder.md  reference_champtteams_pokepaste.md
.github/workflows/: ci.yml  release.yml
data/: legal_pool_mA.json  type_chart.json
openspec/changes/fix-champions-items/: design.md  proposal.md  tasks.md
openspec/changes/fix-champions-items/specs/champions-item-pool/: spec.md
openspec/changes/pokemon-team-builder/: design.md  proposal.md  tasks.md
openspec/changes/pokemon-team-builder/specs/pokemon-lookup/: spec.md
openspec/changes/pokemon-team-builder/specs/replica-export/: spec.md
openspec/changes/pokemon-team-builder/specs/showdown-export/: spec.md
openspec/changes/pokemon-team-builder/specs/synergy-engine/: spec.md
openspec/changes/pokemon-team-builder/specs/team-generator/: spec.md
openspec/changes/pokemon-team-builder/specs/viability-rater/: spec.md
openspec/changes/web-app/: design.md  proposal.md  tasks.md
openspec/changes/web-app/specs/deployment/: spec.md
openspec/changes/web-app/specs/web-api/: spec.md
openspec/changes/web-app/specs/web-ui/: spec.md
pokemon_team_builder/: config.py
pokemon_team_builder/cli/: main.py
pokemon_team_builder/data/: legal_pool_loader.py  legal_pool_mA.json  pokeapi_client.py  role_sp_templates.json
pokemon_team_builder/domain/: exceptions.py  models.py
pokemon_team_builder/services/: pokemon_lookup.py  replica_exporter.py  synergy_engine.py  team_generator.py  viability_rater.py
tests/: test_cli.py  test_legal_pool.py  test_pokeapi_client.py  test_pokemon_lookup.py  test_replica_exporter.py  test_smoke.py  test_synergy_engine.py  test_team_generator.py  test_viability_rater.py
