[project]
name = "pokemon-team-builder"
version = "0.1.0"
description = "CLI to generate competitive Pokemon Champions teams (Regulation M-A, Doubles)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Janisher-Illderment" }
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "hishel>=0.0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "respx",
]

# Entry point — restored in Group 9 (cli/main.py does not exist yet)
# [project.scripts]
# poke-builder = "pokemon_team_builder.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pokemon_team_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pokemon_team_builder"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
